Work on consulting-bibliography

--- a/part0/doc/morganstein2014.bib
+++ b/part0/doc/morganstein2014.bib
@@ -1,6 +1,7 @@
 @article {morganstein2014,
   author = {David Morganstein},
-  title = {},
+  title = {Technical Knowledge? Check! Experience? Check! What Else Might Help
+You? – Thoughts from the ASA President-Elect},
   journal = {The Statistical Consultant},
   volume = {30},
   pages = {4-7},
