--- a/part0/src/illustrating-sas-markdown.Rmd
+++ b/part0/src/illustrating-sas-markdown.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Illustrating SAS Markdown"
 author: "Steve Simon"
-output: powerpoint_presentation
+output: html_document
 ---
 
-```{r setup, include=FALSE}
-require(SASmarkdown)
+```{r setup}
+library(SASmarkdown)
 saslog_hookset("source")
 sasexe <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
 sasopts <- "-nosplash -ls 75"
@@ -13,6 +13,16 @@ sasopts <- "-nosplash -ls 75"
 
 # Then set up SAS code chunks with
 ```{r, engine="saslog", engine.path=sasexe, engine.opts=sasopts, SASecho=FALSE}
-proc means data=sashelp.class;
+* getting-started.sas by Steve Simon;
+data small_example;
+ input x y;
+ cards;
+1 2
+2 4
+3 6
+;
+proc print
+    data=small_example(obs=1);
+title "First row of data";
 run;
 ```
